# connect-rs

./: Cargo.toml  README.md  buf.gen.yaml  buf.yaml  flake.nix
connect-axum/: Cargo.toml
connect-axum-macros/: Cargo.toml
connect-axum-macros/src/: lib.rs
connect-axum/src/: encode.rs  extract.rs  lib.rs  message.rs  parse.rs  response.rs
example/: .gitignore  Cargo.toml  build.rs
example/proto/greet/v1/: example.proto
example/src/: main.rs
examples/todos/: Cargo.toml
examples/todos/proto/todos/v1/: todos.proto
examples/todos/src/: main.rs
protoc-gen-connect-rs-axum/: Cargo.toml
protoc-gen-connect-rs-axum/src/: main.rs
protoc-gen-connect-rust/: Cargo.toml
protoc-gen-connect-rust/src/: main.rs
