[workspace]
members = [
  "connect-axum",
  "connect-axum-macros",
  "protoc-gen-connect-rs-axum",
  "examples/todos",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.6", default-features = false, features = [
  "http1",
  "tokio",
] }
base64 = { version = "0.22.1", default-features = false }
heck = { version = "0.5.0", default-features = false }
prost = { version = "0.14.1", default-features = false }
prost-reflect = { version = "0.16.2", default-features = false, features = [
  "serde",
] }
prost-types = { version = "0.14.1", default-features = false, features = [
  "std",
] }
quote = { version = "1.0.41", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false }
syn = { version = "2.0.106", default-features = false, features = [
  "full",
  "parsing",
  "printing",
  "proc-macro",
] }
