[package]
name = "connect-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
connect-axum-macros = { path = "../connect-axum-macros" }

prost = { workspace = true }
prost-reflect = { workspace = true }

axum = "0.7"
base64 = "0.22.1"
http = "1.3.1"
http-body-util = "0.1.3"
serde_json = "1.0.145"
urlencoding = "2.1.3"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
