[package]
name = "connect-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
connect-axum-macros = { path = "../connect-axum-macros" }

axum = { workspace = true, features = ["json"] }
base64.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true


http = { version = "1.3.1", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
mime = { version = "0.3.17", default-features = false }
url = { version = "2.5.7", default-features = false }
urlencoding = { version = "2.1.3", default-features = false }
