[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
connect-axum = { path = "../connect-axum" }
connect-axum-macros = { path = "../connect-axum-macros" }

prost = { workspace = true }
prost-reflect = { workspace = true }

axum = "0.7"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
prost-build = "0.14.1"
