[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
connect-axum = { path = "../connect-axum" }

axum.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true

tokio = { version = "1", default-features = false, features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
