[package]
name = "protoc-gen-connect-rs-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
heck.workspace = true
prost.workspace = true
prost-types.workspace = true
quote.workspace = true
syn = { workspace = true, default-features = true }

prettyplease = { version = "0.2.37", default-features = false }
proc-macro2 = { version = "1.0.103", default-features = false }
